methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:25: error: not found: value makeV
  makeV();
  ^